<resources>

    <!--Meta-->
    <string name="app_name">GEOMETRIA</string>
    <string name="author_data">Renan Santos Carvalho\n1110482313034</string>

    <string name="radious">Raio</string>
    <string name="height">Altura</string>
    <string name="width">Largura</string>

    <string name="circle">Circulo</string>
    <string name="square">Retângulo</string>

    <string name="button_perimeter">Perimetro</string>
    <string name="button_Area">Area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>